--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "test": "jest --detectOpenHandles",
+    "dev": "nodemon src/index.js",
+    "prisma:migrate-dev": "npx prisma migrate dev",   
+    "prisma:studio": "npx prisma studio"            
   },
   "repository": {
     "type": "git",
@@ -26,8 +28,9 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "jest": "^30.0.4",
     "nodemon": "^3.1.10",
-    "prisma": "^6.11.1"
+    "prisma": "^6.11.1",
+    "supertest": "^7.1.3"
   }
-
 }
