--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --passWithNoTests",
     "dev": "nodemon src/index.js",
     "prisma:migrate-dev": "npx prisma migrate dev",
     "prisma:studio": "npx prisma studio"
